node-counter-api/pod-counter-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: counter-api
  labels:
    app: counter-api
spec:
  containers:
    - name: counter-api
      image: khaosdoctor/node-counter-api
      ports:
        - containerPort: 8080
          name: porta-api
      volumeMounts:
        - mountPath: /etc/counter-volume
          name: counter-volume
  volumes:
    - name: counter-volume
      emptyDir: {}
