node-counter-api/counter-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-api-svc
spec:
  type: NodePort
  selector:
    app: counter-api
  ports:
    - protocol: TCP
      port: 8086
      nodePort: 30527
      targetPort: porta-api
