node-counter-api/pod-counter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-svc
spec:
  type: NodePort
  selector:
    app: counter-api
  ports:
    - protocol: TCP
      port: 8085
      nodePort: 30527
      targetPort: porta-api
