node-counter-api/counter-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: counter.info
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-svc
                port:
                  number: 8086
