node-counter-api/counter-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-api-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: counterapi.info
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-api-svc
                port:
                  number: 8086
